kubernetes/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    name: gitlab
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 30001
      protocol: TCP
    - name: ssh
      port: 22
      nodePort: 30002
      protocol: TCP
  selector:
    name: gitlab
