kubernetes/postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-svc
  namespace: gitlab
  labels:
    name: postgresql-svc
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    name: postgresql-db
